# gfxstream

./: .bazelrc  .gitignore  Android.bp  CMakeLists.txt  MODULE.bazel  README.md  build_variables.bzl  meson.build  meson_options.txt
common/base/: AlignedBuf_unittest.cpp  Android.bp  BUILD.bazel  CMakeLists.txt  PathUtils.cpp  SharedMemory_posix.cpp  SharedMemory_win32.cpp  System.cpp  Thread_win32.cpp  UdmabufCreator_linux.cpp  UdmabufCreator_stub.cpp  WorkerThread_unittest.cpp  meson.build
common/image/: Android.bp  BUILD.bazel  CMakeLists.txt  image_utils.cpp
common/logging/: BUILD.bazel  CMakeLists.txt  logging.cpp
common/testenv/: Android.bp  BUILD.bazel  CMakeLists.txt  graphics_test_environment.cpp  meson.build
common/utils/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build  strings.cpp
guest/GLESv1_enc/: BUILD.bazel  GLEncoderUtils.h
guest/GLESv2_enc/: BUILD.bazel  GL2Encoder.cpp  GL2EncoderUtils.h
guest/OpenglSystemCommon/: Android.bp  BUILD.bazel  HostConnection.cpp  VirtioGpuPipeStream.cpp
guest/renderControl_enc/: BUILD.bazel  EmulatorFeatureInfo.h  ExtendedRenderControl.cpp  ExtendedRenderControl.h  GfxStreamRenderControl.cpp  renderControl_client_context.cpp  renderControl_client_context.h  renderControl_client_proc.h  renderControl_enc.cpp  renderControl_entry.cpp  renderControl_ftable.h  renderControl_types.h
host/: Android.bp  BUILD.bazel  CMakeLists.txt  ColorBuffer.cpp  ColorBuffer.h  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer_unittest.cpp  NativeSubWindow.h  NativeSubWindow_android.cpp  NativeSubWindow_cocoa.mm  NativeSubWindow_qnx.cpp  NativeSubWindow_stub.cpp  NativeSubWindow_win32.cpp  NativeSubWindow_x11.cpp  PostWorker.cpp  PostWorker.h  PostWorkerGl.cpp  PostWorkerGl.h  ReadBuffer.cpp  RenderControl.cpp  RenderLibImpl.cpp  RenderLibImpl.h  RenderThread.cpp  RenderWindow.cpp  RenderWindow.h  RendererImpl.cpp  RendererImpl.h  RingStream.cpp  RingStream.h  SyncThread.cpp  SyncThread.h  VirtioGpuContext.cpp  VirtioGpuFrontend.cpp  VirtioGpuFrontend.h  VirtioGpuPipe.cpp  VirtioGpuPipe.h  VirtioGpuResource.cpp  VsyncThread.h  buffer.cpp  (+74 more)
host/address_space/: Android.bp  BUILD.bazel  CMakeLists.txt  address_space_device.cpp  address_space_graphics.cpp  address_space_host_memory_allocator.cpp  address_space_host_memory_allocator_unittest.cpp  address_space_shared_slots_host_memory_allocator.cpp  address_space_shared_slots_host_memory_allocator_unittest.cpp  meson.build
host/backend/: display_operations.cpp  external_object_manager.cpp  stream_utils.cpp  vm_operations.cpp  window_operations.cpp
host/common/: Android.bp  BUILD.bazel  CMakeLists.txt  address_space_operations.cpp  display_operations.cpp  display_surface.cpp  display_surface_user.cpp  dma_device.cpp  external_object_manager.cpp  file_stream.cpp  graphics_driver_lock.cpp  guest_operations.cpp  mem_stream.cpp  meson.build  renderer_operations.cpp  sync_device.cpp  vm_operations.cpp  window_operations.cpp
host/compressed_textures/: Android.bp  BUILD.bazel  CMakeLists.txt  astc_cpu_decompressor_impl.cpp  astc_cpu_decompressor_noop.cpp  astc_cpu_decompressor_unittest.cpp  meson.build
host/decoder_common/: ChecksumCalculatorThreadInfo.cpp  X11Support.cpp
host/features/: Android.bp  BUILD.bazel  CMakeLists.txt  features.cpp  meson.build
host/gl/: Android.bp  BUILD.bazel  CMakeLists.txt  ColorBufferGl.cpp  ColorBufferGl.h  DisplayGl.cpp  EmulatedEglConfig.cpp  EmulatedEglConfig.h  EmulatedEglImage.cpp  EmulatedEglImage.h  EmulationGl.cpp  EmulationGl.h  GLESVersionDetector.cpp  GLESVersionDetector.h  PixelReadFormats.cpp  PixelReadFormats.h  TextureDraw.cpp  TextureDraw.h  borrowed_image_gl.h  buffer_gl.cpp  buffer_gl.h  color_buffer_gl.cpp  color_buffer_gl.h  compositor_gl.cpp  compositor_gl.h  context_helper.h  debug_gl.cpp  debug_gl.h  display_gl.cpp  display_gl.h  display_surface_gl.cpp  display_surface_gl.h  emulated_egl_config.cpp  emulated_egl_config.h  emulated_egl_context.cpp  emulated_egl_context.h  emulated_egl_fence_sync.cpp  emulated_egl_fence_sync.h  emulated_egl_image.cpp  emulated_egl_image.h  (+19 more)
host/goldfish_pipe/: GoldfishPipeService.cpp  GoldfishPipeService.h
host/health/: Android.bp  BUILD.bazel  CMakeLists.txt  TestClock.cpp  meson.build
host/iostream/: meson.build
host/renderControl_dec/: renderControl_dec.cpp  renderControl_opcodes.h  renderControl_server_context.cpp  renderControl_server_context.h  renderControl_server_proc.h  renderControl_types.h
host/renderdoc/: Android.bp  BUILD.bazel  CMakeLists.txt  renderdoc_unittest.cpp
host/snapshot/: meson.build
host/tests/: DefaultFramebufferBlit_unittest.cpp  GLES1Dispatch_unittest.cpp  GLSnapshotBuffers_unittest.cpp  GLSnapshotFramebufferControl_unittest.cpp  GLSnapshotFramebuffers_unittest.cpp  GLSnapshotMultisampling_unittest.cpp  GLSnapshotPixelOperations_unittest.cpp  GLSnapshotPixels_unittest.cpp  GLSnapshotPrograms_unittest.cpp  GLSnapshotRasterization_unittest.cpp  GLSnapshotRenderbuffers_unittest.cpp  GLSnapshotRendering_unittest.cpp  GLSnapshotShaders_unittest.cpp  GLSnapshotTextures_unittest.cpp  GLSnapshotTransformation_unittest.cpp  GLSnapshotVertexAttributes_unittest.cpp  GLSnapshot_unittest.cpp  StalePtrRegistry_unittest.cpp  TextureDraw_unittest.cpp
host/tracing/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build  tracing.cpp
host/vulkan/: Android.bp  BUILD.bazel  BufferVk.cpp  CMakeLists.txt  ColorBufferVk.cpp  ColorBufferVk.h  Compositor.frag  CompositorFragmentShader.h  CompositorVk.cpp  CompositorVk.h  CompositorVk_unittest.cpp  DeviceOpTracker.cpp  DisplaySurfaceVk.cpp  DisplayVk.cpp  DisplayVk.h  ExternalMemory.cpp  PostWorkerVk.cpp  PostWorkerVk.h  SwapChainStateVk.cpp  SwapChainStateVk.h  VkAndroidNativeBuffer.cpp  VkCommonOperations.cpp  VkCommonOperations.h  VkDecoder.cpp  VkDecoderGlobalState.cpp  VkDecoderGlobalState.h  VkDecoderInternalStructs.h  VkDecoderSnapshot.cpp  VkDecoderSnapshot.h  VkDecoderSnapshotUtils.cpp  VkDecoderSnapshotUtils.h  VkEmulatedPhysicalDeviceMemory.cpp  VkEmulatedPhysicalDeviceMemoryTests.cpp  VkFormatUtils.h  VkReconstruction.h  (+90 more)
(+381 files in other folders)
